--- a/individualexhib.html
+++ b/individualexhib.html
@@ -120,22 +120,22 @@
 
             <div class="mySlides">
                 <div class="numbertext">1 / 4</div>
-                <img src="images/work1.jpg" style="width:500px">
+                <img src="images/work1.jpg">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">2 / 4</div>
-                <img src="images/work2.jpg" style="width:500px">
+                <img src="images/work2.jpg">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">3 / 4</div>
-                <img src="images/work3.jpg" style="width:500px">
+                <img src="images/work3.jpg">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">4 / 4</div>
-                <img src="images/work4.jpg" style="width:500px">
+                <img src="images/work4.jpg">
             </div>
 
             <!-- Next/previous controls -->
