--- a/individualexhib.html
+++ b/individualexhib.html
@@ -119,23 +119,33 @@
         <div class="modal-content">
 
             <div class="mySlides">
-                <div class="numbertext">1 / 4</div>
+                <div class="numbertext">1 / 6</div>
                 <img src="images/work1.jpg">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">2 / 4</div>
+                <div class="numbertext">2 / 6</div>
                 <img src="images/work2.jpg">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">3 / 4</div>
+                <div class="numbertext">3 / 6</div>
                 <img src="images/work3.jpg">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">4 / 4</div>
+                <div class="numbertext">4 / 6</div>
                 <img src="images/work4.jpg">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">5 / 6</div>
+                <img src="images/work5.jpg">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">6 / 6</div>
+                <img src="images/work6.jpg">
             </div>
 
             <!-- Next/previous controls -->
