--- a/Individualhome.html
+++ b/Individualhome.html
@@ -43,17 +43,19 @@
             <button type="button">ENTER</button>
         </div>
         <div class="col">
-            <div class="card card1">
-                <h5>Emily Brincat</h5>
-            </div>
-            <div class="card card2">
-                <h5>Liam Borg</h5>
-            </div>
-            <div class="card card3">
-                <h5>Carsten Grech</h5>
-            </div>
-            <div class="card card4">
-                <h5>Riana Attard</h5>
+            <div class="pictures">
+                <div class="card card1">
+                    <h5>Emily Brincat</h5>
+                </div>
+                <div class="card card2">
+                    <h5>Liam Borg</h5>
+                </div>
+                <div class="card card3">
+                    <h5>Carsten Grech</h5>
+                </div>
+                <div class="card card4">
+                    <h5>Riana Attard</h5>
+                </div>
             </div>
         </div>
     </div>
