--- a/Individualhome.html
+++ b/Individualhome.html
@@ -13,6 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -38,7 +43,7 @@
 
     <div class="row">
         <div class="col">
-            <h1>Digital Arts</h1>
+            <h1>DIGITAL ARTS</h1>
             <p>A BFA Digital Arts exhibition by the class of '22</p>
             <button type="button">ENTER</button>
         </div>
