--- a/amy-attard.html
+++ b/amy-attard.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BFA exhbition homepage</title>
 
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="home.js">
+    <link rel="stylesheet" href="amy-attard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -30,16 +29,13 @@
             <nav class="menu">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#about">Exhibition</a></li>
+                    <li><a href="#portfolio">Sponsors</a></li>
                     <li><a href="#contacts">Contacts</a></li>
                 </ul>
             </nav>
         </div>
     </div>
-
-
-
 
     <div class="row">
         <div class="col">
