--- a/amyattard.html
+++ b/amyattard.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BFA exhbition homepage</title>
 
-    <link rel="stylesheet" href="amy-attard.css">
+    <link rel="stylesheet" href="amyattard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
