--- a/individualexhib.html
+++ b/individualexhib.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <script src="https://kit.fontawesome.com/0739becac4.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
     <title>Individual Exhibtion</title>
 
     <link rel="stylesheet" href="card.css">
@@ -157,6 +156,10 @@
     </div>
     <hr>
 
-</body>
+    <footer class="footer">
+        <div class="icons">
+            <a href="https://www.facebook.com/exhibitionctrlz"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/ctrl.z.bfa/?hl=en"><i class="fab fa-instagram"></i></a>
+        </div>
 
 </html>
