--- a/individualexhib.html
+++ b/individualexhib.html
@@ -9,11 +9,12 @@
     <title>Individual Exhibtion</title>
 
     <link rel="stylesheet" href="card.css">
-</head>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+</head>
 
 <body>
 
@@ -99,16 +100,16 @@
     <!-- Images used to open the lightbox -->
     <div class="row">
         <div class="column">
-            <img src="images/work1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+            <img src="images/work1.jpg" alt="illustration 1" onclick="openModal();currentSlide(1)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="images/work2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+            <img src="images/work2.jpg" alt="illustration 2" onclick="openModal();currentSlide(2)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="images/work3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+            <img src="images/work3.jpg" alt="illustration 3" onclick="openModal();currentSlide(3)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="images/work4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+            <img src="images/work4.jpg" alt="illustration 4" onclick="openModal();currentSlide(4)" class="hover-shadow">
         </div>
     </div>
 
@@ -119,32 +120,32 @@
 
             <div class="mySlides">
                 <div class="numbertext">1 / 6</div>
-                <img src="images/work1.jpg">
+                <img src="images/work1.jpg" alt="illustration 1">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">2 / 6</div>
-                <img src="images/work2.jpg">
+                <img src="images/work2.jpg" alt="illustration 2">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">3 / 6</div>
-                <img src="images/work3.jpg">
+                <img src="images/work3.jpg" alt="illustration 3">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">4 / 6</div>
-                <img src="images/work4.jpg">
+                <img src="images/work4.jpg" alt="illustration 4">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">5 / 6</div>
-                <img src="images/work5.jpg">
+                <img src="images/work5.jpg" alt="illustration 5">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">6 / 6</div>
-                <img src="images/work6.jpg">
+                <img src="images/work6.jpg" alt="illustration 6">
             </div>
 
             <!-- Next/previous controls -->
@@ -161,5 +162,7 @@
             <a href="https://www.facebook.com/exhibitionctrlz"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/ctrl.z.bfa/?hl=en"><i class="fab fa-instagram"></i></a>
         </div>
+    </footer>
+</body>
 
 </html>
