--- a/individualexhib.html
+++ b/individualexhib.html
@@ -69,7 +69,7 @@
         <label class="logo">BFA Digital Arts</label>
         <ul>
 
-            <li><a href="Homepage.html">Home</a></li>
+            <li><a href="sherise.html">Home</a></li>
             <li><a href="#">Exhibition</a></li>
             <li><a href="Sponsors.html">Sponsors</a></li>
             <li><a href="ContactForm.html">Contact</a></li>
