--- a/exhibitionshowcase.html
+++ b/exhibitionshowcase.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="exhibition-showcase.css" />
+  <link rel="stylesheet" type="text/css" href="exhibitionshowcase.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,6 +17,12 @@
   <title>Exhibition Showcase</title>
 </head>
 
+<STYLE>
+  A {
+    text-decoration: none;
+  }
+</STYLE>
+
 <body>
   <nav>
     <input type="checkbox" id="check" />
@@ -25,7 +31,7 @@
     </label>
     <label class="logo">BFA Digital Arts</label>
     <ul>
-      <li><a href="Homepage.html">Home</a></li>
+      <li><a href="sherise.html">Home</a></li>
       <li><a href="#">Exhibition</a></li>
       <li><a href="Sponsors.html">Sponsors</a></li>
       <li><a href="ContactForm.html">Contact</a></li>
@@ -36,11 +42,13 @@
   </nav>
 
   <div class="image">
-    <img class="image_img" src="images/Artboard1.png" alt="artwork" />
-    <div class="image_overlay">
-      <div class="image_title">Jason Vella</div>
-      <p class="image_description">Digital illustration - Nightmares</p>
-    </div>
+    <a href="individualexhib.html">
+      <img class="image_img" src="images/Artboard1.png" alt="artwork">
+      <div class="image_overlay">
+        <div class="image_title">Abby Bonello</div>
+        <p class="image_description">Digital illustration - Nightmares</p>
+    </a>
+  </div>
   </div>
 
   <div class="image">
@@ -86,7 +94,7 @@
   <div class="image">
     <img class="image_img" src="images/drawing.png" alt="artwork" />
     <div class="image_overlay">
-      <div class="image_title">Abby Bonello</div>
+      <div class="image_title">Jason Vella</div>
       <p class="image_description">Digital Illustration - Typographical</p>
     </div>
   </div>
