--- a/sherise.html
+++ b/sherise.html
@@ -26,7 +26,7 @@
         <ul>
 
             <li><a href="sherise.html">Home</a></li>
-            <li><a href="#">Exhibition</a></li>
+            <li><a href="exhibitionshowcase.html">Exhibition</a></li>
             <li><a href="Sponsors.html">Sponsors</a></li>
             <li><a href="ContactForm.html">Contact</a></li>
             <li><a href="https://www.um.edu.mt/maks/digitalarts" target="_blank">About</a></li>
