--- a/ContactForm.html
+++ b/ContactForm.html
@@ -24,7 +24,7 @@
         <label class="logo">BFA Digital Arts</label>
         <ul>
 
-            <li><a href="sherise.html">Home</a></li>
+            <li><a href="homepage.html">Home</a></li>
             <li><a href="exhibitionshowcase.html">Exhibition</a></li>
             <li><a href="Sponsors.html">Sponsors</a></li>
             <li><a href="ContactForm.html">Contact</a></li>
