--- a/exhibitionshowcase.html
+++ b/exhibitionshowcase.html
@@ -15,13 +15,13 @@
   <script src="https://kit.fontawesome.com/0739becac4.js" crossorigin="anonymous"></script>
 
   <title>Exhibition Showcase</title>
-</head>
 
-<STYLE>
-  A {
-    text-decoration: none;
-  }
-</STYLE>
+  <STYLE>
+    A {
+      text-decoration: none;
+    }
+  </STYLE>
+</head>
 
 <body>
   <nav>
@@ -31,8 +31,8 @@
     </label>
     <label class="logo">BFA Digital Arts</label>
     <ul>
-      <li><a href="sherise.html">Home</a></li>
-      <li><a href="#">Exhibition</a></li>
+      <li><a href="homepage.html">Home</a></li>
+      <li><a href="exhibitionshowcase.html">Exhibition</a></li>
       <li><a href="Sponsors.html">Sponsors</a></li>
       <li><a href="ContactForm.html">Contact</a></li>
       <li>
