--- a/individualexhib.html
+++ b/individualexhib.html
@@ -69,8 +69,8 @@
         <label class="logo">BFA Digital Arts</label>
         <ul>
 
-            <li><a href="sherise.html">Home</a></li>
-            <li><a href="#">Exhibition</a></li>
+            <li><a href="homepage.html">Home</a></li>
+            <li><a href="exhibitionshowcase.html">Exhibition</a></li>
             <li><a href="Sponsors.html">Sponsors</a></li>
             <li><a href="ContactForm.html">Contact</a></li>
             <li><a href="https://www.um.edu.mt/maks/digitalarts" target="_blank">About</a></li>
