--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="sherise.css">
+    <link rel="stylesheet" type="text/css" href="homepage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Source+Sans+Pro&display=swap"
@@ -25,7 +25,7 @@
         <label class="logo">BFA Digital Arts</label>
         <ul>
 
-            <li><a href="sherise.html">Home</a></li>
+            <li><a href="homepage.html">Home</a></li>
             <li><a href="exhibitionshowcase.html">Exhibition</a></li>
             <li><a href="Sponsors.html">Sponsors</a></li>
             <li><a href="ContactForm.html">Contact</a></li>
